update work and pub

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,20 @@
   url    = {https://arxiv.org/abs/1704.06882},
 }
 
+@article{vlavsic2022implicit,
+  title={Implicit neural representation for mesh-free inverse obstacle scattering},
+  author={Vla{\v{s}}i{\'c}, Tin and Nguyen, Hieu and Dokmani{\'c}, Ivan},
+  journal={arXiv preprint arXiv:2206.02027},
+  year={2022}
+}
+
+@article{khorashadizadeh2022deep,
+  title={Deep variational inverse scattering},
+  author={Khorashadizadeh, AmirEhsan and Aghababaei, Ali and Vla{\v{s}}i{\'c}, Tin and Nguyen, Hieu and Dokmani{\'c}, Ivan},
+  journal={arXiv preprint arXiv:2212.04309},
+  year={2022}
+}
+
 @article{nguyen2020stable,
   title={A stable parareal-like method for the second order wave equation},
   author={Nguyen, Hieu and Tsai, Richard},
@@ -20,10 +34,13 @@
   year={2020},
   publisher={Elsevier}
 }
-@article{nguyen2021numerical,
+
+@article{nguyen2023numerical,
   title={Numerical wave propagation aided by deep learning},
   author={Nguyen, Hieu and Tsai, Richard},
-  journal={arXiv preprint arXiv:2107.13184},
-  year={2021},
-  url = {https://arxiv.org/abs/2107.13184},
+  journal={Journal of Computational Physics},
+  volume={475},
+  pages={111828},
+  year={2023},
+  publisher={Elsevier}
 }
